# copy-scenario

./: .pylintrc  Dockerfile  README.md  logger.py  main.py  pyproject.toml
.github/workflows/: branch-ci.yml
config/: __init__.py  local.env
utils/: appservice.py
